--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "moment": "^2.16.0",
     "vue": "^2.0.0-rc.8"
   },
   "devDependencies": {
